--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -135,8 +135,7 @@ For the characterization of the CF, I chose the bending rigidity of the blastode
 <!--CF evolution linked to novel expression domain of btd-->
 <p>The function of the cephalic furrow in preventing mechanical instabilities depends on the correct positioning and timing of the invagination; it must occur at the head–trunk boundary and the initiation of the process must begin before other morphogenetic movements take place. In <em>Drosophila</em>, the infolding is mediated by the overlapping expression domains of <em>btd</em> and <em>eve</em> at the head–trunk boundary.<span class="citation" data-cites="Vincent1997-fa"><sup><a href="#ref-Vincent1997-fa" role="doc-biblioref">7</a></sup></span> However, it remains unclear if this genetic patterning of <em>Drosophila</em> is conserved in other flies with or without the cephalic furrow. To uncover the gene expression changes associated with the evolution of the cephalic furrow, we compared the expression of known and newly-identified cephalic furrow genes between <em>Drosophila</em> and the dipteran fly <em>Clogmia albipunctata</em>, a species from the basally-branching Psychodidae family which has no cephalic furrow.<span class="citation" data-cites="Jimenez-Guri2014-zs Dey2023-pj"><sup><a href="#ref-Dey2023-pj" role="doc-biblioref">13</a>,<a href="#ref-Jimenez-Guri2014-zs" role="doc-biblioref">16</a></sup></span></p>
 <h3 id="ancestral-slpeve-interaction-defines-headtrunk-position">Ancestral <em>slp</em>–<em>eve</em> interaction defines head–trunk position</h3>
-<p>To discover new genes directly involved in cephalic furrow formation in addition to <em>btd</em>, <em>eve</em>, and <em>prd</em>, we performed a live-imaging screen in strains containing loss-of-function alleles for a selection of candidate genes expressed at the head–trunk region.<span class="citation" data-cites="Tomancak2002-yf Tomancak2007-db Lecuyer2007-uy"><sup><a href="#ref-Tomancak2002-yf" role="doc-biblioref">17</a>–<a href="#ref-Lecuyer2007-uy" role="doc-biblioref">19</a></sup></span> Because the cephalic furrow is transient and leaves no trace, the live-imaging approach is critical to identify potential phenotypes. From about 50 genes, we identified five showing abnormal cephalic furrow formation to different degrees. Besides the previously described genes affecting cephalic furrow formation, we observed a strong cephalic furrow phenotype in flies mutant for <em>sloppy paired</em> (<em>slp</em>) (see Table ??).</p>
-<!--TODO: Make this screen table or figure.-->
+<p>To uncover other genes directly involved in cephalic furrow formation in addition to <em>btd</em>, <em>eve</em>, and <em>prd</em>, we performed a live-imaging screen in strains containing loss-of-function alleles for a selection of candidate genes expressed at the head–trunk region.<span class="citation" data-cites="Tomancak2002-yf Tomancak2007-db Lecuyer2007-uy"><sup><a href="#ref-Tomancak2002-yf" role="doc-biblioref">17</a>–<a href="#ref-Lecuyer2007-uy" role="doc-biblioref">19</a></sup></span> Because the cephalic furrow is transient and leaves no trace, the live-imaging approach is critical to recognize altered phenotypes. From about 50 genes, we only detected three showing abnormal cephalic furrow formation to different degrees besides the previously described genes (see Table <a href="#tbl:screen">4</a>). The strongest cephalic furrow phenotype was present in flies mutant for the <em>sloppy paired</em> (<em>slp</em>) genes.</p>
 <!--Early slp activity positions initiator cells-->
 <p><em>slp</em> is a known anterior repressor involved in the positioning of anterior pair rule stripes,<span class="citation" data-cites="Andrioli2004-qi Andrioli2012-fv"><sup><a href="#ref-Andrioli2004-qi" role="doc-biblioref">20</a>,<a href="#ref-Andrioli2012-fv" role="doc-biblioref">21</a></sup></span> but its involvement with cephalic furrow formation has not been analyzed. Our imaging data on mutant embryos lacking both <em>slp1</em> and <em>slp2</em> genes shows that the cephalic furrow invagination is delayed and shifted anteriorly about 5%, leading to an abnormal proportion of head and trunk regions (Figure <a href="#fig:slp">S11</a>a). Interestingly, in <em>slp</em> mutants the typical <em>btd</em> and <em>eve</em> overlapping domains is present but shifted forward about 2.5 cell rows (Figure <a href="#fig:slp">S11</a>b). By analyzing the developmental expression of <em>slp</em>, <em>eve</em>, and <em>btd</em> transcripts from the onset of zygotic activation until the onset of gastrulation in <em>Drosophila</em>, we found that <em>slp</em> and <em>eve</em> are expressed early in broad juxtaposing anterior and domains, respectively, that demarcate the boundary between the head and trunk regions (Figure <a href="#fig:gene-expression">5</a>a). <em>eve</em> expression is initially ubiquitous, but its anterior limit recedes until the posterior limit of the <em>slp</em> domain, while <em>btd</em> expression initiates secondarily at the interface between <em>slp</em> and <em>eve</em> (Figure <a href="#fig:gene-expression">5</a>a). These data indicate that the early <em>slp</em> activity is an upstream factor required for positioning <em>eve</em> stripe 1 and <em>btd</em> domain, and consequently, important for determining the head–trunk boundary and the site of invagination for the cephalic furrow along the anteroposterior axis.</p>
 <!--Early slp/eve domains demarcate the head--trunk boundary-->
@@ -705,6 +704,69 @@ For the characterization of the CF, I chose the bending rigidity of the blastode
 <td>CF=6, EF=13</td>
 <td>CF=7, EF=7</td>
 <td>CF=14, EF=8</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="tbl:screen" class="tablenos">
+<table>
+<caption><span>Table 4:</span> Summary of live-imaging screening results for cephalic furrow genes. </caption>
+<colgroup>
+<col style="width: 11%" />
+<col style="width: 17%" />
+<col style="width: 44%" />
+<col style="width: 26%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th>name</th>
+<th>symbol</th>
+<th>allele/deletion</th>
+<th>phenotype</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><em>buttonhead</em></td>
+<td><em>btd</em></td>
+<td><em>btd</em><sup>XA</sup></td>
+<td>absent<span class="citation" data-cites="Vincent1997-fa"><sup><a href="#ref-Vincent1997-fa" role="doc-biblioref">7</a></sup></span></td>
+</tr>
+<tr class="even">
+<td><em>even skipped</em></td>
+<td><em>eve</em></td>
+<td><em>eve</em><sup>3</sup></td>
+<td>absent<span class="citation" data-cites="Vincent1997-fa"><sup><a href="#ref-Vincent1997-fa" role="doc-biblioref">7</a></sup></span></td>
+</tr>
+<tr class="odd">
+<td><em>paired</em></td>
+<td><em>prd</em></td>
+<td><em>prd</em><sup>4</sup></td>
+<td>delayed<span class="citation" data-cites="Blankenship2001-tm"><sup><a href="#ref-Blankenship2001-tm" role="doc-biblioref">14</a></sup></span> and abnormal</td>
+</tr>
+<tr class="even">
+<td><em>sloppy paired 1</em> and <em>2</em></td>
+<td><em>slp1</em>, <em>slp2</em></td>
+<td><em>slp</em><sup>Δ34B</sup></td>
+<td>delayed and displaced anteriorly</td>
+</tr>
+<tr class="odd">
+<td><em>sloppy paired 1</em></td>
+<td><em>slp1</em></td>
+<td><em>slp1</em><sup>1</sup></td>
+<td>delayed and displaced anteriorly</td>
+</tr>
+<tr class="even">
+<td><em>giant</em></td>
+<td><em>gt</em></td>
+<td><em>gt</em><sup>X11</sup></td>
+<td>perturbed formation</td>
+</tr>
+<tr class="odd">
+<td><em>knirps</em>, <em>knirps-like</em></td>
+<td><em>kni</em>, <em>knrl</em></td>
+<td>Df(3L)BSC448</td>
+<td>ventral portion displaced anteriorly</td>
 </tr>
 </tbody>
 </table>
